--- a/index.html
+++ b/index.html
@@ -252,6 +252,94 @@ body.dark-mode .price-tag {
 .social-icons a:hover {
     color: #FF6F00;
 }
+/* Animación al pasar el mouse */
+.contact-section:hover {
+    background: linear-gradient(135deg, #fff0e1, #ffd9b2);
+}/* 🌺 FORMULARIO TEMÁTICO */
+.contact-section {
+    background: linear-gradient(135deg, #fff5ec, #ffe0b2);
+    border-radius: 15px;
+    padding: 2rem;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    text-align: center;
+    color: #4a2a00;
+}
+
+.contact-section h2 {
+    color: #C21807;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+}
+
+.contact-section p {
+    margin-bottom: 2rem;
+    color: #5a3b1a;
+    font-size: 1rem;
+}
+
+/* Campos del formulario */
+.contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.form-group label {
+    display: block;
+    font-weight: bold;
+    color: #BF360C;
+    margin-bottom: 0.5rem;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 0.8rem;
+    border: 2px solid #FFB347;
+    border-radius: 10px;
+    font-size: 1rem;
+    background: #fffaf4;
+    color: #333;
+    transition: all 0.3s ease;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+    outline: none;
+    border-color: #FF6F00;
+    box-shadow: 0 0 8px rgba(255,111,0,0.3);
+}
+
+/* Botón */
+.submit-btn {
+    display: block;
+    width: 100%;
+    background: linear-gradient(135deg, #FF6F61, #FFB347);
+    color: white;
+    border: none;
+    padding: 1rem;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.submit-btn:hover {
+    background: linear-gradient(135deg, #FF8A65, #FFD54F);
+    transform: scale(1.05);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+}
+
+/* Animación al pasar el mouse */
+.contact-section:hover {
+    background: linear-gradient(135deg, #fff0e1, #ffd9b2);
+}
 
 </style>
 
@@ -607,5 +695,29 @@ body.dark-mode .price-tag {
                 <p><strong>💡 Nota:</strong> Incluye acceso al parque, espectáculos nocturnos y actividades especiales. 
                 Consulta paquetes con hotel en el sitio oficial.</p>
             </div>
+    <div class="section contact-section">
+    <h2>📩 Envíanos tus comentarios</h2>
+    <p>¿Te gustó esta ofrenda digital? 💀🌼 Cuéntanos qué te pareció o comparte cómo celebras tú el Día de Muertos.</p>
+
+    <form action="https://formspree.io/f/xkgkgkww" method="POST" class="contact-form">
+        <div class="form-group">
+            <label for="nombre">🕯️ Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required placeholder="Escribe tu nombre...">
+        </div>
+
+        <div class="form-group">
+            <label for="email">💌 Correo electrónico:</label>
+            <input type="email" id="email" name="email" required placeholder="tu@correo.com">
+        </div>
+
+        <div class="form-group">
+            <label for="mensaje">💀 Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="5" required placeholder="Escribe tu mensaje aquí..."></textarea>
+        </div>
+
+        <button type="submit" class="submit-btn">✨ Enviar mensaje ✨</button>
+    </form>
+</div>
 </body>
+
 </html>
